--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,60
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>24 Sep 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://moeinsarbandi.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+98 935 9535 721</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Tehran, Iran</span></li>
                 </ul>
