add IELTS TEST.html

--- a/index.html
+++ b/index.html
@@ -314,6 +314,24 @@ bx-plus"></i></a>
     </div>
 </div>
 
+<div class="col-lg-4 col-md-6 portfolio-item filter-Certificate">
+    <div class="portfolio-wrap">
+        <img src="assets/img/portfolio/IELTS_Sarbandi1.jpg" class="img-fluid" alt="">
+        <div class="portfolio-links">
+            <a href="assets/img/portfolio/IELTS_Sarbandi1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="
+                <h2>IELTS Test Report (ACADEMIC)</h2>
+                <p>Completed by Moein Sarbandi on DEC 20, 2023</p>
+                </p>
+                <p>Overall Band Score: 7</p>
+				<p>CEFR Level: C1</p>
+
+            ">
+                <i class="bx bx-plus"></i>
+            </a>
+        </div>
+    </div>
+</div>
+
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
